<resources>
    <string name="app_name">Final Project</string>
    <string name="WelcomeMessage">Welcome User!</string>
    <string name="loginMessage">Login</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_message">"Create a new account"</string>
    <string name="RegisterUsername">Create Name</string>
    <string name="email">Enter your email</string>
    <string name="prompt_name">Enter Name</string>
    <string name="register_failed">"Register failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Strings used for fragments for navigation -->
    <string name="profile_username">\@DefeatedInsect</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="resetPassLabel">Reset</string>
    <string name="resetPasswordTv">Reset Password</string>
    <string name="emailEtHint">Enter Email</string>
    <string name="passwordEtHint">New Password</string>
    <string name="confirmPassEtHint">Confirm Password</string>
    <!--Strings used for game lobby fragment -->
    <string name="genreTitle">Quiz Battle</string>
    <string name="lobbyCodeText">Your lobby code: 0000</string>
    <string name="createLobbyBtn">Create Lobby</string>
    <string name="joinFriendTv">Or join a friend\'s lobby\:</string>
    <string name="joinCodeInput">Enter lobby code</string>
    <string name="joinLobbyBtn">Join Lobby</string>
    <string name="statusText">Status\: </string>
    <string name="startGameBtn">Start Game</string>
    <!--Strings used for home navigation fragment -->
    <string name="home_nav_today">Today</string>
    <string name="home_nav_community">Community</string>
    <string name="home_nav_rules">Rules</string>
    <string name="home_nav_todays_challenges">Today’s\nChallenges</string>
    <string name="home_nav_welcome_back">Hey Bob, welcome back!</string>
    <string name="home_nav_quote_of_the_day">Quote of the Day</string>
    <string name="home_nav_quote_text">The best way to predict the future is to create it.</string>
    <string name="home_nav_quote_author">- Abraham Lincoln</string>
    <string name="home_nav_exploring_options">Exploring Options</string>
    <string name="home_nav_exploring_options_subtitle">Use the info tab to find new alternatives instead of vaping.</string>
    <string name="home_nav_game_genre">Game Genre</string>
    <string name="home_nav_genre_social">Social</string>
    <string name="home_nav_genre_financial">Financial</string>
    <!--Strings used for leaderboard fragment -->
    <string name="questionText">Leaderboard</string>
    <!--Strings used for profile fragment -->
    <string name="profile_real_name">Ericka Anderson</string>
    <string name="profile_follow_count">0</string>
    <string name="profile_follow_label">Follow</string>
    <string name="profile_following_count">0</string>
    <string name="profile_following_label">Following</string>
    <string name="profile_friend_count">0</string>
    <string name="profile_friends_label">Friends</string>
    <string name="profile_daily_rank">#189 Daily Rank</string>
    <string name="profile_weekly_rank">#79 Weekly Rank</string>
    <string name="profile_edit_profile_button">Edit Profile</string>
    <!--Strings used for edit profile activity -->
    <string name="edit_profile_change_picture">Change Picture</string>
    <string name="edit_profile_username_hint">Username</string>
    <string name="edit_profile_full_name_hint">Full Name</string>
    <string name="edit_profile_save_changes">Save Changes</string>



    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="article_title">Article Title</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="enter_lobby_code">Enter lobby code</string>
    <string name="hello">Hello</string>
    <string name="quick_quiz">Quick Quiz</string>
    <string name="_1_why_is_vaping_still_risky">1. Why is vaping still risky?</string>
    <string name="because_it_has_no_nicotine">Because it has no nicotine.</string>
    <string name="because_it_can_still_cause_addiction_and_lung_issues">Because it can still cause addiction and lung issues.</string>
    <string name="because_it_is_more_expensive_than_cigarettes">Because it is more expensive than cigarettes.</string>
    <string name="_2_which_of_these_is_a_healthy_alternative_mentioned">2. Which of these is a healthy alternative mentioned?</string>
    <string name="switching_to_another_nicotine_product">Switching to another nicotine product.</string>
    <string name="ignoring_cravings_until_they_go_away">Ignoring cravings until they go away.</string>
    <string name="exercise_and_new_hobbies">Exercise and new hobbies.</string>
    <string name="_3_what_role_can_friends_or_community_play">3. What role can friends or community play?</string>
    <string name="providing_support_and_accountability">Providing support and accountability.</string>
    <string name="buying_more_vape_devices">Buying more vape devices.</string>
    <string name="they_have_no_impact">They have no impact.</string>
    <string name="submit_quiz">Submit Quiz</string>
    <string name="home">Home</string>
    <string name="board">Board</string>
    <string name="profile">Profile</string>
    <!-- Friends Activtiy strings -->
    <string name="request">Tap a request to accept it</string>
    <string name="friend_request">Incoming Friend Requests</string>
    <string name="friends">Your Friends</string>
    <string name="friends_title">Friends</string>
    <string name="search_for_users">Search for users</string>
    <string name="enter_username">Enter username</string>
    <string name="send_friend_request">Send Friend Request</string>

    <string name="article_title_exploring">
        Exploring Options: Alternatives to Vaping
    </string>

    <!-- Strings used for fragments for Article -->

    <string name="article_body_exploring">
        Vaping may seem like a safer choice than smoking, but it still carries
        health risks and can create strong nicotine dependence.\n\n
        This article explores practical alternatives such as exercise, breathing
        exercises, social support, and hobbies that can help manage stress and
        cravings without nicotine.
    </string>
    <string name="quiz_battle">" Quiz Battle"</string>
    <string name="your_lobby_code">"Your lobby code: "</string>
    <string name="waiting_for_friend_to_join">Waiting for friend to join...</string>
    <string name="joined_lobby_with_friend">Joined lobby with friend!</string>
    <string name="code_not_found_demo_only">Code not found. (Demo only)</string>
    <string name="hey_bob_welcome_back">Hey Bob, welcome back!</string>
    <string name="hey_s_welcome_back">Hey %s, welcome back!</string>
    <string name="user_mail_com">User@mail.com</string>
    <string name="user123">user123</string>

</resources>