<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/resetPasswordTv"
        android:layout_width="258dp"
        android:layout_height="201dp"
        android:lineSpacingExtra="34sp"
        android:text="@string/resetPasswordTv"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <Button
        android:id="@+id/resetPasswordBtn"
        android:layout_width="263dp"
        android:layout_height="46dp"
        android:layout_marginTop="52dp"
        android:text="@string/resetPassLabel"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="269dp"
        android:layout_height="54dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/emailEtHint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/resetPasswordTv"
        app:layout_constraintTop_toBottomOf="@+id/resetPasswordTv" />
</androidx.constraintlayout.widget.ConstraintLayout>